--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,26 @@
-##  파일무시
-
-## 다음과 같은 확장자는 전체 무시
+# Compiled class file
 *.class
 
-## 폴더무시
+# bin directory
+msgServer/bin/
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
